--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -12,16 +12,11 @@ $enable-cssgrid: true;
 /* Size things to allow the virtual scroll container to determine its own size */
 html,
 body {
-	height: 100%;
+	height: fit-content;
 	margin: 0;
 }
 
-#root {
-	height: 100%;
-}
-
 #app {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
